--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,16 @@
+@InProceedings{zhang-mcdonald:2012:EMNLP-CoNLL,
+  author    = {Zhang, Hao  and  McDonald, Ryan},
+  title     = {Generalized Higher-Order Dependency Parsing with Cube Pruning},
+  booktitle = {Proceedings of the 2012 Joint Conference on Empirical Methods in Natural Language Processing and Computational Natural Language Learning},
+  month     = {July},
+  year      = {2012},
+  address   = {Jeju Island, Korea},
+  publisher = {Association for Computational Linguistics},
+  pages     = {320--331},
+  url       = {http://www.aclweb.org/anthology/D12-1030}
+}
+
+
 @InProceedings{koo-collins:2010:ACL,
   author    = {Koo, Terry  and  Collins, Michael},
   title     = {Efficient Third-Order Dependency Parsers},
