--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,16 @@
+@InProceedings{fernandezgonzalez-gomezrodriguez:2012:EMNLP-CoNLL,
+  author    = {Fern\'{a}ndez-Gonz\'{a}lez, Daniel  and  G\'{o}mez-Rodr\'{i}guez, Carlos},
+  title     = {Improving Transition-Based Dependency Parsing with Buffer Transitions},
+  booktitle = {Proceedings of the 2012 Joint Conference on Empirical Methods in Natural Language Processing and Computational Natural Language Learning},
+  month     = {July},
+  year      = {2012},
+  address   = {Jeju Island, Korea},
+  publisher = {Association for Computational Linguistics},
+  pages     = {308--319},
+  url       = {http://www.aclweb.org/anthology/D12-1029}
+}
+
+
 @InProceedings{zhang-mcdonald:2012:EMNLP-CoNLL,
   author    = {Zhang, Hao  and  McDonald, Ryan},
   title     = {Generalized Higher-Order Dependency Parsing with Cube Pruning},
