--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,12 @@
+@inproceedings{nivre2005pseudo,
+  title={Pseudo-projective dependency parsing},
+  author={Nivre, Joakim and Nilsson, Jens},
+  booktitle={Proceedings of the 43rd Annual Meeting on Association for Computational Linguistics},
+  pages={99--106},
+  year={2005},
+  organization={Association for Computational Linguistics}
+}
+
 @InProceedings{fernandezgonzalez-gomezrodriguez:2012:EMNLP-CoNLL,
   author    = {Fern\'{a}ndez-Gonz\'{a}lez, Daniel  and  G\'{o}mez-Rodr\'{i}guez, Carlos},
   title     = {Improving Transition-Based Dependency Parsing with Buffer Transitions},
