bib from : http://aclweb.org/anthology//D/D10/D10-1004.bib

--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,16 @@
+@InProceedings{martins-EtAl:2010:EMNLP,
+  author    = {Martins, Andre  and  Smith, Noah  and  Xing, Eric  and  Aguiar, Pedro  and  Figueiredo, Mario},
+  title     = {Turbo Parsers: Dependency Parsing by Approximate Variational Inference},
+  booktitle = {Proceedings of the 2010 Conference on Empirical Methods in Natural Language Processing},
+  month     = {October},
+  year      = {2010},
+  address   = {Cambridge, MA},
+  publisher = {Association for Computational Linguistics},
+  pages     = {34--44},
+  url       = {http://www.aclweb.org/anthology/D10-1004}
+}
+
+
 @InProceedings{nivre-mcdonald:2008:ACLMain,
   author    = {Nivre, Joakim  and  McDonald, Ryan},
   title     = {Integrating Graph-Based and Transition-Based Dependency Parsers},
