--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,16 @@
+@InProceedings{rush-EtAl:2010:EMNLP,
+  author    = {Rush, Alexander M  and  Sontag, David  and  Collins, Michael  and  Jaakkola, Tommi},
+  title     = {On Dual Decomposition and Linear Programming Relaxations for Natural Language Processing},
+  booktitle = {Proceedings of the 2010 Conference on Empirical Methods in Natural Language Processing},
+  month     = {October},
+  year      = {2010},
+  address   = {Cambridge, MA},
+  publisher = {Association for Computational Linguistics},
+  pages     = {1--11},
+  url       = {http://www.aclweb.org/anthology/D10-1001}
+}
+
+
 @InProceedings{martins-EtAl:2010:EMNLP,
   author    = {Martins, Andre  and  Smith, Noah  and  Xing, Eric  and  Aguiar, Pedro  and  Figueiredo, Mario},
   title     = {Turbo Parsers: Dependency Parsing by Approximate Variational Inference},
