--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,16 @@
+@InProceedings{bohnet-kuhn:2012:EACL2012,
+  author    = {Bohnet, Bernd  and  Kuhn, Jonas},
+  title     = {The Best of BothWorlds -- A Graph-based Completion Model for Transition-based Parsers},
+  booktitle = {Proceedings of the 13th Conference of the European Chapter of the Association for Computational Linguistics},
+  month     = {April},
+  year      = {2012},
+  address   = {Avignon, France},
+  publisher = {Association for Computational Linguistics},
+  pages     = {77--87},
+  url       = {http://www.aclweb.org/anthology/E12-1009}
+}
+
+
 @InProceedings{rush-EtAl:2010:EMNLP,
   author    = {Rush, Alexander M  and  Sontag, David  and  Collins, Michael  and  Jaakkola, Tommi},
   title     = {On Dual Decomposition and Linear Programming Relaxations for Natural Language Processing},
