--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,13 @@
+@inproceedings{covington2001fundamental,
+  title={A fundamental algorithm for dependency parsing},
+  author={Covington, Michael A},
+  booktitle={Proceedings of the 39th annual ACM southeast conference},
+  pages={95--102},
+  year={2001},
+  organization={Citeseer}
+}
+
+
 @InProceedings{rush-EtAl:2010:EMNLP,
   author    = {Rush, Alexander M  and  Sontag, David  and  Collins, Michael  and  Jaakkola, Tommi},
   title     = {On Dual Decomposition and Linear Programming Relaxations for Natural Language Processing},
