--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,18 @@
+@inproceedings{McDonald:2006:MDA:1596276.1596317,
+ author = {McDonald, Ryan and Lerman, Kevin and Pereira, Fernando},
+ title = {Multilingual Dependency Analysis with a Two-stage Discriminative Parser},
+ booktitle = {Proceedings of the Tenth Conference on Computational Natural Language Learning},
+ series = {CoNLL-X '06},
+ year = {2006},
+ location = {New York City, New York},
+ pages = {216--220},
+ numpages = {5},
+ url = {http://dl.acm.org/citation.cfm?id=1596276.1596317},
+ acmid = {1596317},
+ publisher = {Association for Computational Linguistics},
+ address = {Stroudsburg, PA, USA},
+}
+
 @inproceedings{covington2001fundamental,
   title={A fundamental algorithm for dependency parsing},
   author={Covington, Michael A},
