bib from : http://aclweb.org/anthology//L/L12/L12-1115.bib

--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,19 @@
+@inproceedings{PETROV12.274.L12-1115,
+    author = {Slav Petrov and Dipanjan Das and Ryan McDonald},
+    url = {http://www.lrec-conf.org/proceedings/lrec2012/pdf/274_Paper.pdf},
+    note = {ACL Anthology Identifier: L12-1115},
+    title = {A Universal Part-of-Speech Tagset},
+    booktitle = {Proceedings of the Eighth International Conference on Language Resources and Evaluation (LREC-2012)},
+    year = {2012},
+    month = {May},
+    address = {Istanbul, Turkey},
+    editor = {Nicoletta Calzolari and Khalid Choukri and Thierry Declerck and Mehmet U\u{g}ur Do\u{g}an and Bente Maegaard and Joseph Mariani and Jan Odijk and Stelios Piperidis},
+    publisher = {European Language Resources Association (ELRA)},
+    isbn = {978-2-9517408-7-7},
+    language = {English},
+    pages = {2089--2096}
+    }
+
 @inproceedings{McDonald:2006:MDA:1596276.1596317,
  author = {McDonald, Ryan and Lerman, Kevin and Pereira, Fernando},
  title = {Multilingual Dependency Analysis with a Two-stage Discriminative Parser},
