--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,16 @@
+@InProceedings{smith-eisner:2008:EMNLP,
+  author    = {Smith, David  and  Eisner, Jason},
+  title     = {Dependency Parsing by Belief Propagation},
+  booktitle = {Proceedings of the 2008 Conference on Empirical Methods in Natural Language Processing},
+  month     = {October},
+  year      = {2008},
+  address   = {Honolulu, Hawaii},
+  publisher = {Association for Computational Linguistics},
+  pages     = {145--156},
+  url       = {http://www.aclweb.org/anthology/D08-1016}
+}
+
+
 @inproceedings{PETROV12.274.L12-1115,
     author = {Slav Petrov and Dipanjan Das and Ryan McDonald},
     url = {http://www.lrec-conf.org/proceedings/lrec2012/pdf/274_Paper.pdf},
