--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,16 @@
+@InProceedings{mann-mccallum:2008:ACLMain,
+  author    = {Mann, Gideon S.  and  McCallum, Andrew},
+  title     = {Generalized Expectation Criteria for Semi-Supervised Learning of Conditional Random Fields},
+  booktitle = {Proceedings of ACL-08: HLT},
+  month     = {June},
+  year      = {2008},
+  address   = {Columbus, Ohio},
+  publisher = {Association for Computational Linguistics},
+  pages     = {870--878},
+  url       = {http://www.aclweb.org/anthology/P/P08/P08-1099}
+}
+
+
 @InProceedings{smith-eisner:2008:EMNLP,
   author    = {Smith, David  and  Eisner, Jason},
   title     = {Dependency Parsing by Belief Propagation},
