--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,17 @@
+@InProceedings{liu-liu-lin:2005:ACL,
+  author    = {Liu, Yang  and  Liu, Qun  and  Lin, Shouxun},
+  title     = {Log-Linear Models for Word Alignment},
+  booktitle = {Proceedings of the 43rd Annual Meeting of the Association for Computational Linguistics (ACL'05)},
+  month     = {June},
+  year      = {2005},
+  address   = {Ann Arbor, Michigan},
+  publisher = {Association for Computational Linguistics},
+  pages     = {459--466},
+  url       = {http://www.aclweb.org/anthology/P05-1057},
+  doi       = {10.3115/1219840.1219897}
+}
+
+
 @InProceedings{mann-mccallum:2008:ACLMain,
   author    = {Mann, Gideon S.  and  McCallum, Andrew},
   title     = {Generalized Expectation Criteria for Semi-Supervised Learning of Conditional Random Fields},
