--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,16 @@
+@InProceedings{riesa-marcu:2010:ACL,
+  author    = {Riesa, Jason  and  Marcu, Daniel},
+  title     = {Hierarchical Search for Word Alignment},
+  booktitle = {Proceedings of the 48th Annual Meeting of the Association for Computational Linguistics},
+  month     = {July},
+  year      = {2010},
+  address   = {Uppsala, Sweden},
+  publisher = {Association for Computational Linguistics},
+  pages     = {157--166},
+  url       = {http://www.aclweb.org/anthology/P10-1017}
+}
+
+
 @InProceedings{liu-liu-lin:2005:ACL,
   author    = {Liu, Yang  and  Liu, Qun  and  Lin, Shouxun},
   title     = {Log-Linear Models for Word Alignment},
