--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,16 @@
+@InProceedings{mcdonald-petrov-hall:2011:EMNLP,
+  author    = {McDonald, Ryan  and  Petrov, Slav  and  Hall, Keith},
+  title     = {Multi-Source Transfer of Delexicalized Dependency Parsers},
+  booktitle = {Proceedings of the 2011 Conference on Empirical Methods in Natural Language Processing},
+  month     = {July},
+  year      = {2011},
+  address   = {Edinburgh, Scotland, UK.},
+  publisher = {Association for Computational Linguistics},
+  pages     = {62--72},
+  url       = {http://www.aclweb.org/anthology/D11-1006}
+}
+
+
 @InProceedings{riesa-marcu:2010:ACL,
   author    = {Riesa, Jason  and  Marcu, Daniel},
   title     = {Hierarchical Search for Word Alignment},
