--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,16 @@
+@InProceedings{lopez-resnik:2005:WPT,
+  author    = {Lopez, Adam  and  Resnik, Philip},
+  title     = {Improved {HMM} Alignment Models for Languages with Scarce Resources},
+  booktitle = {Proceedings of the ACL Workshop on Building and Using Parallel Texts},
+  month     = {June},
+  year      = {2005},
+  address   = {Ann Arbor, Michigan},
+  publisher = {Association for Computational Linguistics},
+  pages     = {83--86},
+  url       = {http://www.aclweb.org/anthology/W/W05/W05-0812}
+}
+
+
 @InProceedings{mcdonald-petrov-hall:2011:EMNLP,
   author    = {McDonald, Ryan  and  Petrov, Slav  and  Hall, Keith},
   title     = {Multi-Source Transfer of Delexicalized Dependency Parsers},
