--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,16 @@
+@InProceedings{suzuki-fujino-isozaki:2007:EMNLP-CoNLL2007,
+  author    = {Suzuki, Jun  and  Fujino, Akinori  and  Isozaki, Hideki},
+  title     = {Semi-Supervised Structured Output Learning Based on a Hybrid Generative and Discriminative Approach},
+  booktitle = {Proceedings of the 2007 Joint Conference on Empirical Methods in Natural Language Processing and Computational Natural Language Learning (EMNLP-CoNLL)},
+  month     = {June},
+  year      = {2007},
+  address   = {Prague, Czech Republic},
+  publisher = {Association for Computational Linguistics},
+  pages     = {791--800},
+  url       = {http://www.aclweb.org/anthology/D/D07/D07-1083}
+}
+
+
 @InProceedings{lopez-resnik:2005:WPT,
   author    = {Lopez, Adam  and  Resnik, Philip},
   title     = {Improved {HMM} Alignment Models for Languages with Scarce Resources},
