bib from : http://aclweb.org/anthology//P/P08/P08-1076.bib

--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,16 @@
+@InProceedings{suzuki-isozaki:2008:ACLMain,
+  author    = {Suzuki, Jun  and  Isozaki, Hideki},
+  title     = {Semi-Supervised Sequential Labeling and Segmentation Using Giga-Word Scale Unlabeled Data},
+  booktitle = {Proceedings of ACL-08: HLT},
+  month     = {June},
+  year      = {2008},
+  address   = {Columbus, Ohio},
+  publisher = {Association for Computational Linguistics},
+  pages     = {665--673},
+  url       = {http://www.aclweb.org/anthology/P/P08/P08-1076}
+}
+
+
 @InProceedings{suzuki-fujino-isozaki:2007:EMNLP-CoNLL2007,
   author    = {Suzuki, Jun  and  Fujino, Akinori  and  Isozaki, Hideki},
   title     = {Semi-Supervised Structured Output Learning Based on a Hybrid Generative and Discriminative Approach},
