--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,16 @@
+@InProceedings{koo-carreras-collins:2008:ACLMain,
+  author    = {Koo, Terry  and  Carreras, Xavier  and  Collins, Michael},
+  title     = {Simple Semi-supervised Dependency Parsing},
+  booktitle = {Proceedings of ACL-08: HLT},
+  month     = {June},
+  year      = {2008},
+  address   = {Columbus, Ohio},
+  publisher = {Association for Computational Linguistics},
+  pages     = {595--603},
+  url       = {http://www.aclweb.org/anthology/P/P08/P08-1068}
+}
+
+
 @InProceedings{suzuki-isozaki:2008:ACLMain,
   author    = {Suzuki, Jun  and  Isozaki, Hideki},
   title     = {Semi-Supervised Sequential Labeling and Segmentation Using Giga-Word Scale Unlabeled Data},
