--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,15 @@
+@inproceedings{moore:2004:ACL,
+  author    = {Moore, Robert C.},
+  title     = {Improving IBM Word Alignment Model 1},
+  booktitle = {Proceedings of the 42nd Meeting of the Association for Computational Linguistics (ACL'04), Main Volume},
+  year      = 2004,
+  month     = {July},
+  address   = {Barcelona, Spain},
+  pages     = {518--525},
+  url       = {http://www.aclweb.org/anthology/P04-1066},
+  doi       = {10.3115/1218955.1219021}
+}
+
 @InProceedings{koo-carreras-collins:2008:ACLMain,
   author    = {Koo, Terry  and  Carreras, Xavier  and  Collins, Michael},
   title     = {Simple Semi-supervised Dependency Parsing},
