--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,16 @@
+@InProceedings{och:2003:ACL,
+  author    = {Franz Josef Och},
+  title     = {Minimum Error Rate Training in Statistical Machine Translation},
+  booktitle = {Proceedings of the 41st Annual Meeting of the Association for Computational Linguistics},
+  month     = {July},
+  year      = {2003},
+  address   = {Sapporo, Japan},
+  publisher = {Association for Computational Linguistics},
+  pages     = {160--167},
+  url       = {http://www.aclweb.org/anthology/P03-1021},
+  doi       = {10.3115/1075096.1075117}
+}
+
 @InProceedings{papineni-EtAl:2002:ACL,
   author    = {Kishore Papineni  and  Salim Roukos  and  Todd Ward  and  Wei-Jing Zhu},
   title     = {Bleu: a Method for Automatic Evaluation of Machine Translation},
