--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,16 @@
+@InProceedings{gao-guzman-vogel:2010:PAPERS,
+  author    = {Gao, Qin  and  Guzman, Francisco  and  Vogel, Stephan},
+  title     = {EMDC: A Semi-supervised Approach for Word Alignment},
+  booktitle = {Proceedings of the 23rd International Conference on Computational Linguistics (Coling 2010)},
+  month     = {August},
+  year      = {2010},
+  address   = {Beijing, China},
+  publisher = {Coling 2010 Organizing Committee},
+  pages     = {349--357},
+  url       = {http://www.aclweb.org/anthology/C10-1040}
+}
+
+
 @InProceedings{och:2003:ACL,
   author    = {Franz Josef Och},
   title     = {Minimum Error Rate Training in Statistical Machine Translation},
