bib from : http://aclweb.org/anthology//W/W09/W09-3811.bib

--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,16 @@
+@InProceedings{nivre-kuhlmann-hall:2009:IWPT09,
+  author    = {Nivre, Joakim  and  Kuhlmann, Marco  and  Hall, Johan},
+  title     = {An Improved Oracle for Dependency Parsing with Online Reordering},
+  booktitle = {Proceedings of the 11th International Conference on Parsing Technologies (IWPT'09)},
+  month     = {October},
+  year      = {2009},
+  address   = {Paris, France},
+  publisher = {Association for Computational Linguistics},
+  pages     = {73--76},
+  url       = {http://www.aclweb.org/anthology/W09-3811}
+}
+
+
 @InProceedings{gao-guzman-vogel:2010:PAPERS,
   author    = {Gao, Qin  and  Guzman, Francisco  and  Vogel, Stephan},
   title     = {EMDC: A Semi-supervised Approach for Word Alignment},
