--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,16 @@
+@InProceedings{attardi:2006:CoNLL-X,
+  author    = {Attardi, Giuseppe},
+  title     = {Experiments with a Multilanguage Non-Projective Dependency Parser},
+  booktitle = {Proceedings of the Tenth Conference on Computational Natural Language Learning (CoNLL-X)},
+  month     = {June},
+  year      = {2006},
+  address   = {New York City},
+  publisher = {Association for Computational Linguistics},
+  pages     = {166--170},
+  url       = {http://www.aclweb.org/anthology/W/W06/W06-2922}
+}
+
+
 @InProceedings{nivre-kuhlmann-hall:2009:IWPT09,
   author    = {Nivre, Joakim  and  Kuhlmann, Marco  and  Hall, Johan},
   title     = {An Improved Oracle for Dependency Parsing with Online Reordering},
