bib from : http://scholar.google.com/scholar.bib?q=info:GJx1ZsQfOj8J:scholar.google.com/&output=citation&scisig=AAGBfm0AAAAAUyK2WmJqQW1ggG32-IBRFuPxujIFWJ7M&scisf=4&hl=en

--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,10 @@
+@article{choi2012optimization,
+  title={Optimization of natural language processing components for robustness and scalability},
+  author={Choi, Jinho D and Adviser-Palmer, Martha},
+  year={2012},
+  publisher={University of Colorado at Boulder}
+}
+
 @InProceedings{attardi:2006:CoNLL-X,
   author    = {Attardi, Giuseppe},
   title     = {Experiments with a Multilanguage Non-Projective Dependency Parser},
