bib from : http://aclweb.org/anthology//W/W06/W06-2933.bib

--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,16 @@
+@InProceedings{nivre-EtAl:2006:CoNLL-X,
+  author    = {Nivre, Joakim  and  Hall, Johan  and  Nilsson, Jens  and  Eryi{\v g}it, G{\"u}l{\c s}en  and  Marinov, Svetoslav},
+  title     = {Labeled Pseudo-Projective Dependency Parsing with Support Vector Machines},
+  booktitle = {Proceedings of the Tenth Conference on Computational Natural Language Learning (CoNLL-X)},
+  month     = {June},
+  year      = {2006},
+  address   = {New York City},
+  publisher = {Association for Computational Linguistics},
+  pages     = {221--225},
+  url       = {http://www.aclweb.org/anthology/W/W06/W06-2933}
+}
+
+
 @article{choi2012optimization,
   title={Optimization of natural language processing components for robustness and scalability},
   author={Choi, Jinho D and Adviser-Palmer, Martha},
