--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,16 @@
+@InProceedings{nivre-EtAl:2007:EMNLP-CoNLL2007,
+  author    = {Nivre, Joakim  and  Hall, Johan  and  K\"ubler, Sandra  and  McDonald, Ryan  and  Nilsson, Jens  and  Riedel, Sebastian  and  Yuret, Deniz},
+  title     = {The {CoNLL} 2007 Shared Task on Dependency Parsing},
+  booktitle = {Proceedings of the CoNLL Shared Task Session of EMNLP-CoNLL 2007},
+  month     = {June},
+  year      = {2007},
+  address   = {Prague, Czech Republic},
+  publisher = {Association for Computational Linguistics},
+  pages     = {915--932},
+  url       = {http://www.aclweb.org/anthology/D/D07/D07-1096}
+}
+
+
 @InProceedings{nivre-EtAl:2006:CoNLL-X,
   author    = {Nivre, Joakim  and  Hall, Johan  and  Nilsson, Jens  and  Eryi{\v g}it, G{\"u}l{\c s}en  and  Marinov, Svetoslav},
   title     = {Labeled Pseudo-Projective Dependency Parsing with Support Vector Machines},
