bib from : http://aclweb.org/anthology//C/C12/C12-1059.bib

--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,16 @@
+@InProceedings{goldberg-nivre:2012:PAPERS,
+  author    = {Goldberg, Yoav  and  Nivre, Joakim},
+  title     = {A Dynamic Oracle for Arc-Eager Dependency Parsing},
+  booktitle = {Proceedings of COLING 2012},
+  month     = {December},
+  year      = {2012},
+  address   = {Mumbai, India},
+  publisher = {The COLING 2012 Organizing Committee},
+  pages     = {959--976},
+  url       = {http://www.aclweb.org/anthology/C12-1059}
+}
+
+
 @InProceedings{nivre-EtAl:2007:EMNLP-CoNLL2007,
   author    = {Nivre, Joakim  and  Hall, Johan  and  K\"ubler, Sandra  and  McDonald, Ryan  and  Nilsson, Jens  and  Riedel, Sebastian  and  Yuret, Deniz},
   title     = {The {CoNLL} 2007 Shared Task on Dependency Parsing},
