--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,16 @@
+@InProceedings{rush-EtAl:2012:EMNLP-CoNLL,
+  author    = {Rush, Alexander  and  Reichart, Roi  and  Collins, Michael  and  Globerson, Amir},
+  title     = {Improved Parsing and POS Tagging Using Inter-Sentence Consistency Constraints},
+  booktitle = {Proceedings of the 2012 Joint Conference on Empirical Methods in Natural Language Processing and Computational Natural Language Learning},
+  month     = {July},
+  year      = {2012},
+  address   = {Jeju Island, Korea},
+  publisher = {Association for Computational Linguistics},
+  pages     = {1434--1444},
+  url       = {http://www.aclweb.org/anthology/D12-1131}
+}
+
+
 @InProceedings{goldberg-nivre:2012:PAPERS,
   author    = {Goldberg, Yoav  and  Nivre, Joakim},
   title     = {A Dynamic Oracle for Arc-Eager Dependency Parsing},
