--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,16 @@
+@InProceedings{hatori-EtAl:2011:IJCNLP-2011,
+  author    = {Hatori, Jun  and  Matsuzaki, Takuya  and  Miyao, Yusuke  and  Tsujii, Jun'ichi},
+  title     = {Incremental Joint POS Tagging and Dependency Parsing in Chinese},
+  booktitle = {Proceedings of 5th International Joint Conference on Natural Language Processing},
+  month     = {November},
+  year      = {2011},
+  address   = {Chiang Mai, Thailand},
+  publisher = {Asian Federation of Natural Language Processing},
+  pages     = {1216--1224},
+  url       = {http://www.aclweb.org/anthology/I11-1136}
+}
+
+
 @InProceedings{rush-EtAl:2012:EMNLP-CoNLL,
   author    = {Rush, Alexander  and  Reichart, Roi  and  Collins, Michael  and  Globerson, Amir},
   title     = {Improved Parsing and POS Tagging Using Inter-Sentence Consistency Constraints},
