bib from : http://aclweb.org/anthology//D/D08/D08-1059.bib

--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,16 @@
+@InProceedings{zhang-clark:2008:EMNLP,
+  author    = {Zhang, Yue  and  Clark, Stephen},
+  title     = {A Tale of Two Parsers: {I}nvestigating and Combining Graph-based and Transition-based Dependency Parsing},
+  booktitle = {Proceedings of the 2008 Conference on Empirical Methods in Natural Language Processing},
+  month     = {October},
+  year      = {2008},
+  address   = {Honolulu, Hawaii},
+  publisher = {Association for Computational Linguistics},
+  pages     = {562--571},
+  url       = {http://www.aclweb.org/anthology/D08-1059}
+}
+
+
 @InProceedings{hatori-EtAl:2011:IJCNLP-2011,
   author    = {Hatori, Jun  and  Matsuzaki, Takuya  and  Miyao, Yusuke  and  Tsujii, Jun'ichi},
   title     = {Incremental Joint POS Tagging and Dependency Parsing in Chinese},
