bib from : http://aclweb.org/anthology//P/P11/P11-2121.bib

--- a/db.bib
+++ b/db.bib
@@ -1,15 +1,14 @@
-@InProceedings{zhang-clark:2008:EMNLP,
-  author    = {Zhang, Yue  and  Clark, Stephen},
-  title     = {A Tale of Two Parsers: {I}nvestigating and Combining Graph-based and Transition-based Dependency Parsing},
-  booktitle = {Proceedings of the 2008 Conference on Empirical Methods in Natural Language Processing},
-  month     = {October},
-  year      = {2008},
-  address   = {Honolulu, Hawaii},
+@InProceedings{choi-palmer:2011:ACL-HLT2011,
+  author    = {Choi, Jinho D.  and  Palmer, Martha},
+  title     = {Getting the Most out of Transition-based Dependency Parsing},
+  booktitle = {Proceedings of the 49th Annual Meeting of the Association for Computational Linguistics: Human Language Technologies},
+  month     = {June},
+  year      = {2011},
+  address   = {Portland, Oregon, USA},
   publisher = {Association for Computational Linguistics},
-  pages     = {562--571},
-  url       = {http://www.aclweb.org/anthology/D08-1059}
+  pages     = {687--692},
+  url       = {http://www.aclweb.org/anthology/P11-2121}
 }
-
 
 @InProceedings{hatori-EtAl:2011:IJCNLP-2011,
   author    = {Hatori, Jun  and  Matsuzaki, Takuya  and  Miyao, Yusuke  and  Tsujii, Jun'ichi},
