--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,16 @@
+@InProceedings{zhang-nivre:2012:POSTERS,
+  author    = {Zhang, Yue  and  Nivre, Joakim},
+  title     = {Analyzing the Effect of Global Learning and Beam-Search on Transition-Based Dependency Parsing},
+  booktitle = {Proceedings of COLING 2012: Posters},
+  month     = {December},
+  year      = {2012},
+  address   = {Mumbai, India},
+  publisher = {The COLING 2012 Organizing Committee},
+  pages     = {1391--1400},
+  url       = {http://www.aclweb.org/anthology/C12-2136}
+}
+
+
 @InProceedings{choi-palmer:2011:ACL-HLT2011,
   author    = {Choi, Jinho D.  and  Palmer, Martha},
   title     = {Getting the Most out of Transition-based Dependency Parsing},
