--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,16 @@
+@InProceedings{jiang-EtAl:2013:ACL2013,
+  author    = {Jiang, Wenbin  and  Sun, Meng  and  L\"{u}, Yajuan  and  Yang, Yating  and  Liu, Qun},
+  title     = {Discriminative Learning with Natural Annotations: Word Segmentation as a Case Study},
+  booktitle = {Proceedings of the 51st Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+  month     = {August},
+  year      = {2013},
+  address   = {Sofia, Bulgaria},
+  publisher = {Association for Computational Linguistics},
+  pages     = {761--769},
+  url       = {http://www.aclweb.org/anthology/P13-1075}
+}
+
+
 @InProceedings{zhang-kikui-sumita:2006:HLT-NAACL06-Short,
   author    = {Zhang, Ruiqiang  and  Kikui, Genichiro  and  Sumita, Eiichiro},
   title     = {Subword-based Tagging by Conditional Random Fields for Chinese Word Segmentation},
