--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,16 @@
+@InProceedings{taskar-simon-dan:2005:HLTEMNLP,
+  author    = {Taskar, Ben  and  Simon, Lacoste-Julien  and  Dan, Klein},
+  title     = {A Discriminative Matching Approach to Word Alignment},
+  booktitle = {Proceedings of Human Language Technology Conference and Conference on Empirical Methods in Natural Language Processing},
+  month     = {October},
+  year      = {2005},
+  address   = {Vancouver, British Columbia, Canada},
+  publisher = {Association for Computational Linguistics},
+  pages     = {73--80},
+  url       = {http://www.aclweb.org/anthology/H/H05/H05-1010}
+}
+
+
 @InProceedings{haghighi-klein:2006:HLT-NAACL06-Main,
   author    = {Haghighi, Aria  and  Klein, Dan},
   title     = {Prototype-Driven Learning for Sequence Models},
