--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,16 @@
+@InProceedings{bellare-mccallum:2009:EMNLP,
+  author    = {Bellare, Kedar  and  McCallum, Andrew},
+  title     = {Generalized Expectation Criteria for Bootstrapping Extractors using Record-Text Alignment},
+  booktitle = {Proceedings of the 2009 Conference on Empirical Methods in Natural Language Processing},
+  month     = {August},
+  year      = {2009},
+  address   = {Singapore},
+  publisher = {Association for Computational Linguistics},
+  pages     = {131--140},
+  url       = {http://www.aclweb.org/anthology/D/D09/D09-1014}
+}
+
+
 @InProceedings{taskar-simon-dan:2005:HLTEMNLP,
   author    = {Taskar, Ben  and  Simon, Lacoste-Julien  and  Dan, Klein},
   title     = {A Discriminative Matching Approach to Word Alignment},
