bib from : http://aclweb.org/anthology//W/W12/W12-6316.bib

--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,16 @@
+@InProceedings{yijia-EtAl:2012:CLP2012,
+  author    = {Yijia, Liu  and  Meishan, Zhang  and  Wanxiang, Che  and  Ting, Liu  and  Yihe, Deng},
+  title     = {Micro blogs Oriented Word Segmentation System},
+  booktitle = {Proceedings of the Second CIPS-SIGHAN Joint Conference on Chinese Language Processing},
+  month     = {December},
+  year      = {2012},
+  address   = {Tianjin, China},
+  publisher = {Association for Computational Linguistics},
+  pages     = {85--89},
+  url       = {http://www.aclweb.org/anthology/W12-6316}
+}
+
+
 @InProceedings{bellare-mccallum:2009:EMNLP,
   author    = {Bellare, Kedar  and  McCallum, Andrew},
   title     = {Generalized Expectation Criteria for Bootstrapping Extractors using Record-Text Alignment},
