--- a/db.bib
+++ b/db.bib
@@ -1,6 +1,6 @@
 @article{choi2012optimization,
   title={Optimization of natural language processing components for robustness and scalability},
-  author={Choi, Jinho D and Adviser-Palmer, Martha},
+  author={Choi, Jinho D},
   year={2012},
   publisher={University of Colorado at Boulder}
 }
