--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,16 @@
+@InProceedings{zhang-EtAl:2014:EACL,
+  author    = {Zhang, Meishan  and  Zhang, Yue  and  Che, Wanxiang  and  Liu, Ting},
+  title     = {Type-Supervised Domain Adaptation for Joint Segmentation and POS-Tagging},
+  booktitle = {Proceedings of the 14th Conference of the European Chapter of the Association for Computational Linguistics},
+  month     = {April},
+  year      = {2014},
+  address   = {Gothenburg, Sweden},
+  publisher = {Association for Computational Linguistics},
+  pages     = {588--597},
+  url       = {http://www.aclweb.org/anthology/E14-1062}
+}
+
+
 @InProceedings{yijia-EtAl:2012:CLP2012,
   author    = {Yijia, Liu  and  Meishan, Zhang  and  Wanxiang, Che  and  Ting, Liu  and  Yihe, Deng},
   title     = {Micro blogs Oriented Word Segmentation System},
