--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,16 @@
+@InProceedings{blitzer-mcdonald-pereira:2006:EMNLP,
+  author    = {Blitzer, John  and  McDonald, Ryan  and  Pereira, Fernando},
+  title     = {Domain Adaptation with Structural Correspondence Learning},
+  booktitle = {Proceedings of the 2006 Conference on Empirical Methods in Natural Language Processing},
+  month     = {July},
+  year      = {2006},
+  address   = {Sydney, Australia},
+  publisher = {Association for Computational Linguistics},
+  pages     = {120--128},
+  url       = {http://www.aclweb.org/anthology/W/W06/W06-1615}
+}
+
+
 @InProceedings{zhang-EtAl:2014:EACL,
   author    = {Zhang, Meishan  and  Zhang, Yue  and  Che, Wanxiang  and  Liu, Ting},
   title     = {Type-Supervised Domain Adaptation for Joint Segmentation and POS-Tagging},
