bib from : http://aclweb.org/anthology//D/D11/D11-1090.bib

--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,16 @@
+@InProceedings{sun-xu:2011:EMNLP,
+  author    = {Sun, Weiwei  and  Xu, Jia},
+  title     = {Enhancing Chinese Word Segmentation Using Unlabeled Data},
+  booktitle = {Proceedings of the 2011 Conference on Empirical Methods in Natural Language Processing},
+  month     = {July},
+  year      = {2011},
+  address   = {Edinburgh, Scotland, UK.},
+  publisher = {Association for Computational Linguistics},
+  pages     = {970--979},
+  url       = {http://www.aclweb.org/anthology/D11-1090}
+}
+
+
 @InProceedings{blitzer-mcdonald-pereira:2006:EMNLP,
   author    = {Blitzer, John  and  McDonald, Ryan  and  Pereira, Fernando},
   title     = {Domain Adaptation with Structural Correspondence Learning},
