--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,16 @@
+@InProceedings{zhang-clark:2007:ACLMain,
+  author    = {Zhang, Yue  and  Clark, Stephen},
+  title     = {Chinese Segmentation with a Word-Based Perceptron Algorithm},
+  booktitle = {Proceedings of the 45th Annual Meeting of the Association of Computational Linguistics},
+  month     = {June},
+  year      = {2007},
+  address   = {Prague, Czech Republic},
+  publisher = {Association for Computational Linguistics},
+  pages     = {840--847},
+  url       = {http://www.aclweb.org/anthology/P07-1106}
+}
+
+
 @InProceedings{sun-xu:2011:EMNLP,
   author    = {Sun, Weiwei  and  Xu, Jia},
   title     = {Enhancing Chinese Word Segmentation Using Unlabeled Data},
