--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,16 @@
+@InProceedings{song-EtAl:2012:POSTERS,
+  author    = {Song, Yan  and  Klassen, Prescott  and  Xia, Fei  and  Kit, Chunyu},
+  title     = {Entropy-based Training Data Selection for Domain Adaptation},
+  booktitle = {Proceedings of COLING 2012: Posters},
+  month     = {December},
+  year      = {2012},
+  address   = {Mumbai, India},
+  publisher = {The COLING 2012 Organizing Committee},
+  pages     = {1191--1200},
+  url       = {http://www.aclweb.org/anthology/C12-2116}
+}
+
+
 @inproceedings{SONG12.973.L12-1580,
     author = {Yan Song and Fei Xia},
     url = {http://www.lrec-conf.org/proceedings/lrec2012/pdf/973_Paper.pdf},
@@ -814,4 +827,4 @@
 }
 
 
-ï¿½ï¿½ï¿½
+Ã¯Â¿Â½Ã¯Â¿Â½Ã¯Â¿Â½
