bib from : http://aclweb.org/anthology//D/D10/D10-1077.bib

--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,16 @@
+@InProceedings{chang-han:2010:EMNLP,
+  author    = {Chang, Baobao  and  Han, Dongxu},
+  title     = {Enhancing Domain Portability of Chinese Segmentation Model Using Chi-Square Statistics and Bootstrapping},
+  booktitle = {Proceedings of the 2010 Conference on Empirical Methods in Natural Language Processing},
+  month     = {October},
+  year      = {2010},
+  address   = {Cambridge, MA},
+  publisher = {Association for Computational Linguistics},
+  pages     = {789--798},
+  url       = {http://www.aclweb.org/anthology/D10-1077}
+}
+
+
 @InProceedings{song-EtAl:2012:POSTERS,
   author    = {Song, Yan  and  Klassen, Prescott  and  Xia, Fei  and  Kit, Chunyu},
   title     = {Entropy-based Training Data Selection for Domain Adaptation},
@@ -827,4 +840,4 @@
 }
 
 
-Ã¯Â¿Â½Ã¯Â¿Â½Ã¯Â¿Â½
+ÃÂ¯ÃÂ¿ÃÂ½ÃÂ¯ÃÂ¿ÃÂ½ÃÂ¯ÃÂ¿ÃÂ½
