--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,16 @@
+@InProceedings{garrette-baldridge:2012:EMNLP-CoNLL,
+  author    = {Garrette, Dan  and  Baldridge, Jason},
+  title     = {Type-Supervised Hidden Markov Models for Part-of-Speech Tagging with Incomplete Tag Dictionaries},
+  booktitle = {Proceedings of the 2012 Joint Conference on Empirical Methods in Natural Language Processing and Computational Natural Language Learning},
+  month     = {July},
+  year      = {2012},
+  address   = {Jeju Island, Korea},
+  publisher = {Association for Computational Linguistics},
+  pages     = {821--831},
+  url       = {http://www.aclweb.org/anthology/D12-1075}
+}
+
+
 @InProceedings{chang-han:2010:EMNLP,
   author    = {Chang, Baobao  and  Han, Dongxu},
   title     = {Enhancing Domain Portability of Chinese Segmentation Model Using Chi-Square Statistics and Bootstrapping},
@@ -840,4 +853,4 @@
 }
 
 
-ÃÂ¯ÃÂ¿ÃÂ½ÃÂ¯ÃÂ¿ÃÂ½ÃÂ¯ÃÂ¿ÃÂ½
+ÃÂÃÂ¯ÃÂÃÂ¿ÃÂÃÂ½ÃÂÃÂ¯ÃÂÃÂ¿ÃÂÃÂ½ÃÂÃÂ¯ÃÂÃÂ¿ÃÂÃÂ½
