bib from : http://aclweb.org/anthology//P/P08/P08-1047.bib

--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,16 @@
+@InProceedings{kazama-torisawa:2008:ACLMain,
+  author    = {Kazama, Jun'ichi  and  Torisawa, Kentaro},
+  title     = {Inducing Gazetteers for Named Entity Recognition by Large-Scale Clustering of Dependency Relations},
+  booktitle = {Proceedings of ACL-08: HLT},
+  month     = {June},
+  year      = {2008},
+  address   = {Columbus, Ohio},
+  publisher = {Association for Computational Linguistics},
+  pages     = {407--415},
+  url       = {http://www.aclweb.org/anthology/P/P08/P08-1047}
+}
+
+
 @InProceedings{garrette-baldridge:2012:EMNLP-CoNLL,
   author    = {Garrette, Dan  and  Baldridge, Jason},
   title     = {Type-Supervised Hidden Markov Models for Part-of-Speech Tagging with Incomplete Tag Dictionaries},
@@ -853,4 +866,4 @@
 }
 
 
-ÃÂÃÂ¯ÃÂÃÂ¿ÃÂÃÂ½ÃÂÃÂ¯ÃÂÃÂ¿ÃÂÃÂ½ÃÂÃÂ¯ÃÂÃÂ¿ÃÂÃÂ½
+ÃÂÃÂÃÂÃÂ¯ÃÂÃÂÃÂÃÂ¿ÃÂÃÂÃÂÃÂ½ÃÂÃÂÃÂÃÂ¯ÃÂÃÂÃÂÃÂ¿ÃÂÃÂÃÂÃÂ½ÃÂÃÂÃÂÃÂ¯ÃÂÃÂÃÂÃÂ¿ÃÂÃÂÃÂÃÂ½
