--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,22 @@
+@article{Gao:2005:CWS:1110825.1110830,
+ author = {Gao, Jianfeng and Li, Mu and Wu, Andi and Huang, Chang-Ning},
+ title = {Chinese Word Segmentation and Named Entity Recognition: A Pragmatic Approach},
+ journal = {Comput. Linguist.},
+ issue_date = {December 2005},
+ volume = {31},
+ number = {4},
+ month = dec,
+ year = {2005},
+ issn = {0891-2017},
+ pages = {531--574},
+ numpages = {44},
+ url = {http://dx.doi.org/10.1162/089120105775299177},
+ doi = {10.1162/089120105775299177},
+ acmid = {1110830},
+ publisher = {MIT Press},
+ address = {Cambridge, MA, USA},
+}
+
 @InProceedings{kazama-torisawa:2008:ACLMain,
   author    = {Kazama, Jun'ichi  and  Torisawa, Kentaro},
   title     = {Inducing Gazetteers for Named Entity Recognition by Large-Scale Clustering of Dependency Relations},
