--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,19 @@
+@inproceedings{Wong:1996:CWS:992628.992665,
+ author = {Wong, Pak-kwong and Chan, Chorkin},
+ title = {Chinese Word Segmentation Based on Maximum Matching and Word Binding Force},
+ booktitle = {Proceedings of the 16th Conference on Computational Linguistics - Volume 1},
+ series = {COLING '96},
+ year = {1996},
+ location = {Copenhagen, Denmark},
+ pages = {200--203},
+ numpages = {4},
+ url = {http://dx.doi.org/10.3115/992628.992665},
+ doi = {10.3115/992628.992665},
+ acmid = {992665},
+ publisher = {Association for Computational Linguistics},
+ address = {Stroudsburg, PA, USA},
+} 
+
 @article{Gao:2005:CWS:1110825.1110830,
  author = {Gao, Jianfeng and Li, Mu and Wu, Andi and Huang, Chang-Ning},
  title = {Chinese Word Segmentation and Named Entity Recognition: A Pragmatic Approach},
