--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,19 @@
+@inproceedings{Xue:2003:CWS:1119250.1119278,
+ author = {Xue, Nianwen and Shen, Libin},
+ title = {Chinese Word Segmentation As LMR Tagging},
+ booktitle = {Proceedings of the Second SIGHAN Workshop on Chinese Language Processing - Volume 17},
+ series = {SIGHAN '03},
+ year = {2003},
+ location = {Sapporo, Japan},
+ pages = {176--179},
+ numpages = {4},
+ url = {http://dx.doi.org/10.3115/1119250.1119278},
+ doi = {10.3115/1119250.1119278},
+ acmid = {1119278},
+ publisher = {Association for Computational Linguistics},
+ address = {Stroudsburg, PA, USA},
+}
+
 @inproceedings{Wong:1996:CWS:992628.992665,
  author = {Wong, Pak-kwong and Chan, Chorkin},
  title = {Chinese Word Segmentation Based on Maximum Matching and Word Binding Force},
