bib from : http://aclweb.org/anthology//P/P08/P08-1102.bib

--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,16 @@
+@InProceedings{jiang-EtAl:2008:ACLMain,
+  author    = {Jiang, Wenbin  and  Huang, Liang  and  Liu, Qun  and  L{\"u}, Yajuan},
+  title     = {A Cascaded Linear Model for Joint Chinese Word Segmentation and Part-of-Speech Tagging},
+  booktitle = {Proceedings of ACL-08: HLT},
+  month     = {June},
+  year      = {2008},
+  address   = {Columbus, Ohio},
+  publisher = {Association for Computational Linguistics},
+  pages     = {897--904},
+  url       = {http://www.aclweb.org/anthology/P/P08/P08-1102}
+}
+
+
 @inproceedings{Xue:2003:CWS:1119250.1119278,
  author = {Xue, Nianwen and Shen, Libin},
  title = {Chinese Word Segmentation As LMR Tagging},
@@ -917,4 +930,4 @@
 }
 
 
-ÃÂÃÂÃÂÃÂ¯ÃÂÃÂÃÂÃÂ¿ÃÂÃÂÃÂÃÂ½ÃÂÃÂÃÂÃÂ¯ÃÂÃÂÃÂÃÂ¿ÃÂÃÂÃÂÃÂ½ÃÂÃÂÃÂÃÂ¯ÃÂÃÂÃÂÃÂ¿ÃÂÃÂÃÂÃÂ½
+ÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂ¯ÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂ¿ÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂ½ÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂ¯ÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂ¿ÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂ½ÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂ¯ÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂ¿ÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂ½
