--- a/db.bib
+++ b/db.bib
@@ -1,13 +1,13 @@
-@InProceedings{jiang-EtAl:2008:ACLMain,
-  author    = {Jiang, Wenbin  and  Huang, Liang  and  Liu, Qun  and  L{\"u}, Yajuan},
-  title     = {A Cascaded Linear Model for Joint Chinese Word Segmentation and Part-of-Speech Tagging},
-  booktitle = {Proceedings of ACL-08: HLT},
-  month     = {June},
-  year      = {2008},
-  address   = {Columbus, Ohio},
+@InProceedings{jiang-huang-liu:2009:ACLIJCNLP,
+  author    = {Jiang, Wenbin  and  Huang, Liang  and  Liu, Qun},
+  title     = {Automatic Adaptation of Annotation Standards: Chinese Word Segmentation and POS Tagging -- A Case Study},
+  booktitle = {Proceedings of the Joint Conference of the 47th Annual Meeting of the ACL and the 4th International Joint Conference on Natural Language Processing of the AFNLP},
+  month     = {August},
+  year      = {2009},
+  address   = {Suntec, Singapore},
   publisher = {Association for Computational Linguistics},
-  pages     = {897--904},
-  url       = {http://www.aclweb.org/anthology/P/P08/P08-1102}
+  pages     = {522--530},
+  url       = {http://www.aclweb.org/anthology/P/P09/P09-1059}
 }
 
 
