--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,23 @@
+@article{Zhao:2010:UCT:1781134.1781135,
+ author = {Zhao, Hai and Huang, Chang-Ning and Li, Mu and Lu, Bao-Liang},
+ title = {A Unified Character-Based Tagging Framework for Chinese Word Segmentation},
+ issue_date = {June 2010},
+ volume = {9},
+ number = {2},
+ month = jun,
+ year = {2010},
+ issn = {1530-0226},
+ pages = {5:1--5:32},
+ articleno = {5},
+ numpages = {32},
+ url = {http://doi.acm.org/10.1145/1781134.1781135},
+ doi = {10.1145/1781134.1781135},
+ acmid = {1781135},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Chinese word segmentation, assistant segmenter, character-based tagging method, conditional random field, tag set selection},
+} 
+
 @InProceedings{jiang-huang-liu:2009:ACLIJCNLP,
   author    = {Jiang, Wenbin  and  Huang, Liang  and  Liu, Qun},
   title     = {Automatic Adaptation of Annotation Standards: Chinese Word Segmentation and POS Tagging -- A Case Study},
