--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,16 @@
+@InProceedings{tsuboi-EtAl:2008:PAPERS,
+  author    = {Tsuboi, Yuta  and  Kashima, Hisashi  and  Mori, Shinsuke  and  Oda, Hiroki  and  Matsumoto, Yuji},
+  title     = {Training Conditional Random Fields Using Incomplete Annotations},
+  booktitle = {Proceedings of the 22nd International Conference on Computational Linguistics (Coling 2008)},
+  month     = {August},
+  year      = {2008},
+  address   = {Manchester, UK},
+  publisher = {Coling 2008 Organizing Committee},
+  pages     = {897--904},
+  url       = {http://www.aclweb.org/anthology/C08-1113}
+}
+
+
 @article{Zhao:2010:UCT:1781134.1781135,
  author = {Zhao, Hai and Huang, Chang-Ning and Li, Mu and Lu, Bao-Liang},
  title = {A Unified Character-Based Tagging Framework for Chinese Word Segmentation},
@@ -950,4 +963,4 @@
 }
 
 
-ÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂ¯ÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂ¿ÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂ½ÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂ¯ÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂ¿ÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂ½ÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂ¯ÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂ¿ÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂ½
+ÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂ¯ÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂ¿ÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂ½ÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂ¯ÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂ¿ÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂ½ÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂ¯ÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂ¿ÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂ½
