--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,18 @@
+@inproceedings{Lafferty:2001:CRF:645530.655813,
+ author = {Lafferty, John D. and McCallum, Andrew and Pereira, Fernando C. N.},
+ title = {Conditional Random Fields: Probabilistic Models for Segmenting and Labeling Sequence Data},
+ booktitle = {Proceedings of the Eighteenth International Conference on Machine Learning},
+ series = {ICML '01},
+ year = {2001},
+ isbn = {1-55860-778-1},
+ pages = {282--289},
+ numpages = {8},
+ url = {http://dl.acm.org/citation.cfm?id=645530.655813},
+ acmid = {655813},
+ publisher = {Morgan Kaufmann Publishers Inc.},
+ address = {San Francisco, CA, USA},
+}
+
 @InProceedings{tsuboi-EtAl:2008:PAPERS,
   author    = {Tsuboi, Yuta  and  Kashima, Hisashi  and  Mori, Shinsuke  and  Oda, Hiroki  and  Matsumoto, Yuji},
   title     = {Training Conditional Random Fields Using Incomplete Annotations},
