--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,22 @@
+@article{Liu:1989:LMB:81100.83726,
+ author = {Liu, D. C. and Nocedal, J.},
+ title = {On the Limited Memory BFGS Method for Large Scale Optimization},
+ journal = {Math. Program.},
+ issue_date = {Dec. 1989},
+ volume = {45},
+ number = {3},
+ month = dec,
+ year = {1989},
+ issn = {0025-5610},
+ pages = {503--528},
+ numpages = {26},
+ url = {http://dx.doi.org/10.1007/BF01589116},
+ doi = {10.1007/BF01589116},
+ acmid = {83726},
+ publisher = {Springer-Verlag New York, Inc.},
+ address = {Secaucus, NJ, USA},
+} 
+
 @inproceedings{Lafferty:2001:CRF:645530.655813,
  author = {Lafferty, John D. and McCallum, Andrew and Pereira, Fernando C. N.},
  title = {Conditional Random Fields: Probabilistic Models for Segmenting and Labeling Sequence Data},
