--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,23 @@
+@article{Wu:1993:CTS:180480.180483,
+ author = {Wu, Zimin and Tseng, Gwyneth},
+ title = {Chinese Text Segmentation for Text Retrieval: Achievements and Problems},
+ journal = {J. Am. Soc. Inf. Sci.},
+ issue_date = {Oct. 1993},
+ volume = {44},
+ number = {9},
+ month = oct,
+ year = {1993},
+ issn = {0002-8231},
+ pages = {532--542},
+ numpages = {11},
+ url = {http://dx.doi.org/10.1002/(SICI)1097-4571(199310)44:9<532::AID-ASI3>3.0.CO;2-M},
+ doi = {10.1002/(SICI)1097-4571(199310)44:9<532::AID-ASI3>3.0.CO;2-M},
+ acmid = {180483},
+ publisher = {John Wiley \& Sons, Inc.},
+ address = {New York, NY, USA},
+} 
+
+
 @article{Liu:1989:LMB:81100.83726,
  author = {Liu, D. C. and Nocedal, J.},
  title = {On the Limited Memory BFGS Method for Large Scale Optimization},
