--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,10 @@
+@TECHREPORT{Yu:2001:PNM,
+ author = {Yu, Shiwen and Lu, Jianming and Zhu, Xuefeng and Duan, Huiming and Kang, Shiyong and Sun, Honglin and Wang, Hui and Zhao, Qiang and Zhan, Weidong},
+ year = {2001},
+ title = {Processing norms of modern chinese corpus},
+}
+
+
 @article{Wu:1993:CTS:180480.180483,
  author = {Wu, Zimin and Tseng, Gwyneth},
  title = {Chinese Text Segmentation for Text Retrieval: Achievements and Problems},
