--- a/db.bib
+++ b/db.bib
@@ -238,8 +238,8 @@
     }
 
 @article{DBLP:journals/corr/abs-1109-6341,
-  author    = {Hal Daum{\'e} III and
-               Daniel Marcu},
+  author    = {Daum{\'e} III, Hal and
+               Marcu, Daniel},
   title     = {Domain Adaptation for Statistical Classifiers},
   journal   = {CoRR},
   volume    = {abs/1109.6341},
