--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,23 @@
+@article{Li:2009:PIA:1667988.1667992,
+ author = {Li, Zhongguo and Sun, Maosong},
+ title = {Punctuation As Implicit Annotations for Chinese Word Segmentation},
+ journal = {Comput. Linguist.},
+ issue_date = {December 2009},
+ volume = {35},
+ number = {4},
+ month = dec,
+ year = {2009},
+ issn = {0891-2017},
+ pages = {505--512},
+ numpages = {8},
+ url = {http://dx.doi.org/10.1162/coli.2009.35.4.35403},
+ doi = {10.1162/coli.2009.35.4.35403},
+ acmid = {1667992},
+ publisher = {MIT Press},
+ address = {Cambridge, MA, USA},
+} 
+
+
 @InProceedings{jiang-zhai:2007:ACLMain,
   author    = {Jiang, Jing  and  Zhai, ChengXiang},
   title     = {Instance Weighting for Domain Adaptation in NLP},
