--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,10 @@
+@INPROCEEDINGS{Zhao:2008:ijcnpl:an,
+ author = {Hai Zhao and Chunyu Kit},
+ title = {An empirical comparison of goodness measures for unsupervised Chinese word segmentation with a unified framework},
+ booktitle = {In: The Third International Joint Conference on Natural Language Processing (IJCNLP-2008},
+ year = {2008}
+}
+
 @article{Li:2009:PIA:1667988.1667992,
  author = {Li, Zhongguo and Sun, Maosong},
  title = {Punctuation As Implicit Annotations for Chinese Word Segmentation},
