--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,19 @@
+@article{Crammer:2006:OPA:1248547.1248566,
+ author = {Crammer, Koby and Dekel, Ofer and Keshet, Joseph and Shalev-Shwartz, Shai and Singer, Yoram},
+ title = {Online Passive-Aggressive Algorithms},
+ journal = {J. Mach. Learn. Res.},
+ issue_date = {12/1/2006},
+ volume = {7},
+ month = dec,
+ year = {2006},
+ issn = {1532-4435},
+ pages = {551--585},
+ numpages = {35},
+ url = {http://dl.acm.org/citation.cfm?id=1248547.1248566},
+ acmid = {1248566},
+ publisher = {JMLR.org},
+}
+
 @InProceedings{collins:2002:EMNLP02,
   author    = {Michael Collins},
   title     = {Discriminative Training Methods for Hidden Markov Models: Theory and Experiments with Perceptron Algorithms},
